5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1668_1396.log
== TEST (2019-04-15 19:06:28) 
-- CODE:
valor=int(input("valor consumido:"))
gorjeta=int(input("gorjeta:"))
total= valor+gorjeta
print(round(total,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '224.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:06:53) 
-- CODE:
valor=int(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
total= valor+gorjeta
print(round(total,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '224.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:07:11) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
total= valor+gorjeta
print(round(total,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:07:29) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
total= valor+gorjeta
print(round(total,2))

-- EXECUTION TIME:
0.14371
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1396/main.py", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:07:31) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
total= valor+gorjeta
print(round(total,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:07:41) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
total= valor+gorjeta
print(round(total,2))

-- EXECUTION TIME:
0.185667
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1396/main.py", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:08:00) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
total= valor+gorjeta
print(round(total),2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:08:11) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
total= valor+gorjeta
print(round(total),2)

-- EXECUTION TIME:
0.300091
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1396/main.py", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:08:16) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
total= valor+gorjeta
print(round(total))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:08:29) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
total= valor+gorjeta
print(round(total))

-- EXECUTION TIME:
0.135944
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1396/main.py", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:11:25) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
if(valor==300)
	print(valor*10/100)
else:
	print(valor*6/100)
	
print(round(total))

-- ERROR:
File "XXXX", line 3
    if(valor==300)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:11:50) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
if (valor==300):
	print(valor*10/100)
else:
	print(valor*6/100)
	
print(round(total))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:12:11) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
if (valor==300):
	print(valor*10/100)
else:
	print(valor*6/100)
	
print(round(valor))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:12:23) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
if (valor==300):
	print(valor*10/100)
else:
	print(valor*6/100)
	
print(round(valor))

-- EXECUTION TIME:
0.149
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1396/main.py", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:12:35) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
if (valor==300):
	print(valor*10/100)
else:
	print(valor*6/100)
	
print(round(valor+gorjeta))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:12:44) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
if (valor==300):
	print(valor*10/100)
else:
	print(valor*6/100)
	
print(round(valor+gorjeta))

-- EXECUTION TIME:
0.138173
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1396/main.py", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:12:49) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
if (valor==300):
	print(valor*10/100)
else:
	print(valor*6/100)
	
print(round(valor+gorjeta),2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:13:03) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
if (valor==300):
	print(valor*10/100)
else:
	print(valor*6/100)
	
print(round(valor+gorjeta,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:13:11) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
if (valor==300):
	print(valor*10/100)
else:
	print(valor*6/100)
	
print(round(valor+gorjeta,2))

-- EXECUTION TIME:
0.183619
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1396/main.py", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:15:14) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
if (valor):
	print(valor*10/300)
else:
	print(valor*6/300)
	
print(round(valor+gorjeta,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:15:22) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
if (valor):
	print(valor*10/300)
else:
	print(valor*6/300)
	
print(round(valor+gorjeta,2))

-- EXECUTION TIME:
0.164747
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1396/main.py", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:16:30) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
if (300<gorjeta):
	print(valor*10/100)
else:
	print(valor*6/100)
	
print(round(valor+gorjeta,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:16:49) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
if (300<gorjeta):
	print(valor*10/100)
else:
	print(valor*6/100)
	
print(round(valor+gorjeta,2))

-- EXECUTION TIME:
0.187569
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1396/main.py", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:17:52) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
if (300<gorjeta):
	print(valor-gojeta(*10/100))
else:
	print(gorjeta*6/100)
	
print(round(valor+gorjeta,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:18:01) 
-- CODE:
valor=float(input("valor consumido:"))
gorjeta=float(input("gorjeta:"))
if (300<gorjeta):
	print(valor-gojeta(*10/100))
else:
	print(gorjeta*6/100)
	
print(round(valor+gorjeta,2))

-- EXECUTION TIME:
0.208161
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1396/main.py", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:18:45) 
-- CODE:
valor=float(input())
gorjeta=float(input())
if (300<gorjeta):
	print(valor-gojeta(*10/100))
else:
	print(gorjeta*6/100)
	
print(round(valor+gorjeta,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:18:53) 
-- CODE:
valor=float(input())
gorjeta=float(input())
if (300<gorjeta):
	print(valor-gojeta(*10/100))
else:
	print(gorjeta*6/100)
	
print(round(valor+gorjeta,2))

-- EXECUTION TIME:
0.143352
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1396/main.py", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:21:30) 
-- CODE:
valor=float(input())
gorjeta=float(input())
if (300<=gorjeta):
	print(valor-(valor*0.06))
else:
	print(gorjeta*6/100)
	
print(round(valor+gorjeta,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:21:43) 
-- CODE:
valor=float(input())
gorjeta=float(input())
if (300<=gorjeta):
	print(valor-(valor*0.06))
else:
	print(gorjeta*6/100)
	
print(round(valor+gorjeta,2))

-- EXECUTION TIME:
0.207909
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1396/main.py", line 2, in <module>
    gorjeta=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:23:02) 
-- CODE:
valor=float(input())
if (300<=gorjeta):
	valor(valor-(valor*0.10))
else:
	gorjeta(gorjeta-(gorjeta*0.06)
	
print(round(valor+gorjeta,2))

-- ERROR:
File "XXXX", line 7
    print(round(valor+gorjeta,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:23:37) 
-- CODE:
valor=float(input())
if (300<=gorjeta):
	valor(valor-(valor*0.10))
else:
	gorjeta(gorjeta-(gorjeta*0.06)
	
print(round(total,2))
-- ERROR:
File "XXXX", line 7
    print(round(total,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:23:47) 
-- CODE:
valor=float(input())
if (300<=gorjeta):
	valor(valor-(valor*0.10))
else:
	gorjeta(gorjeta-(gorjeta*0.06)
	
print(round(valor,2))
-- ERROR:
File "XXXX", line 7
    print(round(valor,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:23:56) 
-- CODE:
valor=float(input())
if (300<=gorjeta):
	valor(valor-(valor*0.10))
else:
	gorjeta(gorjeta-(gorjeta*0.06)
	
print(round(gorjeta,2))
-- EXECUTION TIME:
0.149111
-- ERROR:
  File "/home/codebench/codes/1668/1396/main.py", line 7
    print(round(gorjeta,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:23:58) 
-- CODE:
valor=float(input())
if (300<=gorjeta):
	valor(valor-(valor*0.10))
else:
	gorjeta(gorjeta-(gorjeta*0.06)
	
print(round(gorjeta,2))
-- ERROR:
File "XXXX", line 7
    print(round(gorjeta,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:24:58) 
-- CODE:
conta_restaurante=float(input())
if (gorjeta<300):
	valor(valor-(valor*0.10))
else:
	gorjeta(gorjeta-(gorjeta*0.06)
	
print(round(gorjeta,2))
-- ERROR:
File "XXXX", line 7
    print(round(gorjeta,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:26:21) 
-- CODE:
conta_restaurante=float(input())
if (gorjeta<=300):
	gorjeta(gorjeta-(gorjeta*0.10))
else:
	gorjeta(gorjeta-(gorjeta*0.06)
	
print(round(,2))
-- ERROR:
File "XXXX", line 7
    print(round(,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:26:31) 
-- CODE:
conta_restaurante=float(input())
if (gorjeta<=300):
	gorjeta(gorjeta-(gorjeta*0.10))
else:
	gorjeta(gorjeta-(gorjeta*0.06)
	
print(round(gorjeta,2))
-- ERROR:
File "XXXX", line 7
    print(round(gorjeta,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:26:46) 
-- CODE:
conta_restaurante=float(input())
if (gorjeta<=300):
	gorjeta(gorjeta-(gorjeta*0.10))
else:
	gorjeta(gorjeta-(gorjeta*0.06)
	
print(round(conta_restaurante,2))
-- ERROR:
File "XXXX", line 7
    print(round(conta_restaurante,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:27:09) 
-- CODE:
conta_restaurante=float(input())
if (gorjeta<=300):
	gorjeta(gorjeta-(gorjeta*0.10))
else:
	gorjeta(gorjeta-(gorjeta*0.06)
	
print(conta_restaurante,2)
-- ERROR:
File "XXXX", line 7
    print(conta_restaurante,2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:48:02) 
-- CODE:
conta_restaurante=float(input("valor))
if (gorjeta<=300):
	print(gorjeta-round(gorjeta*0.10))
else:
	gorjeta(gorjeta-(gorjeta*0.06)
	
print(conta_restaurante,2)
-- ERROR:
File "XXXX", line 1
    conta_restaurante=float(input("valor))
                                         ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
